Fix spacing

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -693,7 +693,7 @@ input[type=image] {
 }
 
 .google-cs-container + .kofi-container {
-  top: 2.5rem;
+  top: 2.75rem;
 }
 
 .scroll-to-top {
